--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,10 +6,30 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet">
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+    <header>
+      <%= image_tag "memeable_logo.png" %>
+      <nav class="pages_links">
+        <a href="#">By Category</a>
+        <a href="#">By Popularity</a>
+        <a href="#">Search</a>
+      </nav>
+      <div class="login_menu">
+        <%if user_signed_in?%>
+          <p>Welcome, <%= current_user.username %></p>
+          <a href="#">My Account</a>
+          <%=link_to "Log Out", destroy_user_session_path, method: :delete%>
+        <%else%>
+          <%=link_to "Log In", new_user_session_path%>
+        <%end%>
+      </div>
+    </header>
+
+
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     <%= yield %>
