--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,8 @@
     </main>
 
     <footer>
-      asa
+      <p>Made by <%=link_to "Albert Castellano", "https://github.com/acastemoreno/" %></p>
+      <p>Codeable #2</p>
     </footer>
   </body>
 </html>
