--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -71,4 +71,18 @@ header{
 
 footer{
   border-top: 1px solid #000000;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  > *{
+    width: fit-content;
+  }
+
+  a{
+    color: #000000;
+    text-decoration: none;
+  }
+
+
 }
