--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,9 +1,15 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
-
-
-<%if user_signed_in?%>
-  <%=link_to "Log Out", destroy_user_session_path, method: :delete%>
-<%else%>
-  <%=link_to "Sign In", new_user_session_path%>
+<% @memes.each do |date, memes|%>
+  <h2><%= date.strftime('%a, %b %d')%></h2>
+  <div class="date_memes">
+    <% memes.each do |meme| %>
+      <div class="meme">
+        <div class="image">
+          <img src="<%= meme.url_source %>">
+        </div>
+        <div class="author">
+         <p>Created by</p>
+        </div>
+      </div>
+    <% end %>
+  </div>
 <%end%>
