change name of user seed

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,7 +7,7 @@
           <img src="<%= meme.url_source %>">
         </div>
         <div class="author">
-         <p>Created by</p>
+         <p>Created by <%= meme.owner.username%></p>
         </div>
       </div>
     <% end %>
