--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -5,11 +5,13 @@
   gap: 20px 37px;
  
   .meme{
+    display: grid;
+    grid-template-rows: 1fr 25px;;
     border: 1px solid #000000;
 
     .image{
       width: 100%;
-      
+
       img{
         width: 100%;
       }
@@ -17,9 +19,16 @@
 
     .author{
       width: 100%;
-      height: 25px;
       background: #2F2F2F;
       border: 1px solid #000000;
+
+      p{
+        font-weight: normal;
+        font-size: 12px;
+        line-height: 14px;
+
+        color: #FFFFFF;
+      }
     }
     
   }
