--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,15 +1,6 @@
 <% @dates.each do |date, memes|%>
   <h2><%= date.strftime('%a, %b %d')%></h2>
-  <div class="date_memes">
-    <% memes.each do |meme| %>
-      <div class="meme">
-        <div class="image">
-          <img src="<%= meme.url_source %>">
-        </div>
-        <div class="author">
-         <p>Created by <%= meme.owner.username%></p>
-        </div>
-      </div>
-    <% end %>
-  </div>
+
+  <%= render "shared/memes", memes: memes %>
+
 <%end%>
