--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -31,6 +31,12 @@ body > *{
   max-width: 1024px;
 }
 
+h2, label{
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 27px;
+}
+
 header{
   border-bottom: 1px solid #000000;
   display: grid;
@@ -121,5 +127,37 @@ footer{
       }
     }
     
+  }
+}
+
+.indented{
+  margin-top: 20px;
+  margin-left: 15px;
+
+  input{
+    margin-top: 15px;
+    margin-bottom: 30px;
+    font-weight: normal;
+    font-size: 16px;
+    padding-left: 10px;
+    width: 372px;
+    height: 35px;
+  }
+
+  input[type="submit"]{
+    padding-left: 10px;
+    padding-right: 10px;
+    line-height: 18px;
+    min-width: 98px;
+    max-width: fit-content;
+  }
+  
+  a {
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 27px;
+    text-decoration: none;
+
+    color: #78CFBA;
   }
 }
