--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -12,7 +12,8 @@
     <%= f.submit "Send me reset password instructions" %>
   </div>
 
-  <%= render "devise/shared/links" %>
 <% end %>
 
-
+<div class="indented">
+  <%= render "devise/shared/links" %>
+</div>
