--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <h2>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: "indented"}) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "indented" }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="username">
@@ -30,5 +30,8 @@
     <%= f.submit "Sign up" %>
   </div>
 
-  <%= render "devise/shared/links" %>
 <% end %>
+
+<div class="indented">
+  <%= render "devise/shared/links" %>
+</div>
