--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -31,7 +31,7 @@ body > *{
   max-width: 1024px;
 }
 
-h2, label{
+h2, label, .caption{
   font-weight: normal;
   font-size: 24px;
   line-height: 27px;
