--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
       <div class="login_menu">
         <%if user_signed_in?%>
           <p>Welcome, <%= current_user.username %></p>
-          <%=link_to "My Account", render_link_if_not_actual_path(edit_user_registration_path) %>
+          <%=link_to "My Account", render_link_if_not_actual_path(profile_path) %>
           <%=link_to "Log Out", destroy_user_session_path, method: :delete%>
         <%else%>
           <%=link_to "Log In", render_link_if_not_actual_path(new_user_session_path)%>
