link to meme detail

--- a/app/views/shared/_memes.html.erb
+++ b/app/views/shared/_memes.html.erb
@@ -1,9 +1,9 @@
 <div class="grouped_memes">
   <% memes.each do |meme| %>
     <div class="meme">
-      <div class="image">
+      <%= link_to meme_path(meme), class: "image" do %>
         <img src="<%= meme.url_source %>">
-      </div>
+      <% end %>
       <div class="author">
         <p>Created by <%= meme.owner.username%></p>
       </div>
