--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -134,7 +134,7 @@ footer{
   margin-top: 20px;
   margin-left: 15px;
 
-  input{
+  input, select{
     margin-top: 15px;
     margin-bottom: 30px;
     font-weight: normal;
