--- a/app/views/memes/show.html.erb
+++ b/app/views/memes/show.html.erb
@@ -13,6 +13,22 @@
   <section class="comments-container">
     <h2 class="comment__title">Comments:</h2>
     <div class="comment__link"> <%= link_to "Login to add comment!", "#" %> </div>
+
+    <%= form_for @comment, url: meme_comments_path(@meme) do |f| %>
+      <ul>
+        <% @comment.errors.full_messages.each do |error| %>
+          <li><%= error %></li>
+        <% end %>
+      </ul>
+      <p>
+        <%= f.label :body %><br />
+        <%= f.text_area :body %>
+      </p>
+      <p>
+        <%= f.submit %>
+      </p>
+    <% end %>
+
     <div class="comment__wrap">
       <% @meme.comments.each do |comment| %>
         <p class="comment__user"> <%= comment.user.username %> </p>
