--- a/app/views/memes/show.html.erb
+++ b/app/views/memes/show.html.erb
@@ -21,12 +21,12 @@
         <% end %>
       </ul>
       <p>
-        <%= f.label :body %><br />
-        <%= f.text_area :body %>
+        <!-- <%= f.label :body %><br /> -->
+        <%= f.text_area :body, class: 'comment__area' %>
       </p>
-      <p>
-        <%= f.submit %>
-      </p>
+      <div>
+        <%= f.submit(class: "comment_create") %>
+      </div>
     <% end %>
 
     <div class="comment__wrap">
